--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,7 +78,6 @@ body {
 		height: 62px;
 		border: 4px solid transparent;
 		background-color: var(--black-trans);
-		padding: 12px;
 		cursor: pointer;
 		text-transform: uppercase;
 		color: var(--white);
